Reduced the requirements on memory for the scala compiler